pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: networkpolicy-pod
  labels:
    app: web
spec:
  containers:
    - name: my-con
      image: nginx
      ports:
        - containerPort: 80
